[gd_scene load_steps=7 format=3 uid="uid://dcomxfdyxmojj"]

[ext_resource type="Texture2D" uid="uid://dpjx0i465qvbi" path="res://ChrageFireGenarator/2.png" id="1_7t5rl"]
[ext_resource type="Script" uid="uid://c3jhb0uyw2l5r" path="res://object/platformgenarator.gd" id="1_lc3lr"]
[ext_resource type="Texture2D" uid="uid://c05fj110mo6vb" path="res://ChrageFireGenarator/0.png" id="2_k2fmg"]
[ext_resource type="Texture2D" uid="uid://b4n45cof3s5oe" path="res://ChrageFireGenarator/1.png" id="3_3031i"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5vo61"]
size = Vector2(32, 32)

[sub_resource type="CircleShape2D" id="CircleShape2D_7t5rl"]
radius = 80.0

[node name="PlatformGenarator" type="StaticBody2D"]
collision_layer = 8
collision_mask = 0
script = ExtResource("1_lc3lr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -16)
shape = SubResource("RectangleShape2D_5vo61")

[node name="TextureProgressBar" type="TextureProgressBar" parent="."]
offset_left = -16.0
offset_top = -32.0
offset_right = 16.0
fill_mode = 3
texture_under = ExtResource("2_k2fmg")
texture_over = ExtResource("3_3031i")
texture_progress = ExtResource("1_7t5rl")

[node name="TriggerArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="TriggerArea"]
position = Vector2(0, -16)
shape = SubResource("CircleShape2D_7t5rl")

[node name="powerLabel" type="Label" parent="."]
visible = false
offset_left = -80.0
offset_top = -64.0
offset_right = 83.0
offset_bottom = -32.0
theme_override_font_sizes/font_size = 24
text = "Power: 100"
horizontal_alignment = 1

[connection signal="area_entered" from="TriggerArea" to="." method="_on_trigger_area_area_entered"]
[connection signal="area_exited" from="TriggerArea" to="." method="_on_trigger_area_area_exited"]
